# autodub-pro

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
autodub_pro/: __init__.py  __main__.py  config.py  main.py
autodub_pro/core/: __init__.py  audio.py  subtitle.py  video.py
autodub_pro/services/: __init__.py  aws.py  elevenlabs.py  gdrive.py  openai_service.py
autodub_pro/ui/: __init__.py  main_window.py  subtitle_editor.py  video_player.py
autodub_pro/utils/: __init__.py  helpers.py
docs/: CODE_OF_CONDUCT.md  README.md  api-docs.md  contribution-guide.md  faq.md  installation.md  quick_start.md  troubleshooting.md  user-guide.md
tests/: test_core.py
